Some minor changes, plenty of new TODOs.
I just did a review of roughly the first half of the Client class (since it is quite a hotspot). I fixed things that were local problems, added quite a few new TODOs to at least indicate the issues in the code.

git-svn-id: svn://localhost/tmp/s2g/colossus.svn/trunk@3039 c5679a2a-0e0e-0410-bba2-8642b794b8c1